fix: font size of copywrite made legible

--- a/packages/takudev-web/components/organisms/PageFooter/PageFooter.module.scss
+++ b/packages/takudev-web/components/organisms/PageFooter/PageFooter.module.scss
@@ -48,7 +48,7 @@
 
   .copy-right {
     margin-bottom: 10px;
-    font-size: 10px;
+    font-size: 12px;
     color: $white;
   }
 }
